Closed Bug 430419 Opened 16 years ago Closed 16 years ago

Command-Option-F does not select search box #2

Categories

(Core :: Widget: Cocoa, defect)

All
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla1.9

People

(Reporter: masayuki, Assigned: masayuki)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

this is same as bug 429160, but the cause is not same.

this is regression of bug 423814. in bug 423814, I changed that |performKeyEquivalent| return NO when Option or Control key is pressed for keyDown being called by OS. But when Cmd is pressed, keyDown is not called by OS. So, we need to call keyDown or processKeyDown from performKeyEquivalent when Cmd is also pressed.

I'll attach the patch for this.
Flags: blocking1.9?
Attached patch Patch v1.0 (obsolete) — Splinter Review
Sakai-san, would you test this patch on 10.5?
Oops, I forgot a comment. The patch's concept was made by Sakai-san.
Hardware: PC → All
(In reply to comment #1)
> Sakai-san, would you test this patch on 10.5?

This patch works fine on 10.5.
Cmd+Opt+F works, and changing input modes of Kotoeri also works fine.
Comment on attachment 317216 [details] [diff] [review]
Patch v1.0

Thank you, Sakai-san. Let's go to review process.
Attachment #317216 - Flags: review?(joshmoz)
Flags: blocking1.9? → blocking1.9+
Comment on attachment 317216 [details] [diff] [review]
Patch v1.0

Are you sure something like this wouldn't be more accurate?

if (modifierFlags & (NSControlKeyMask | NSAlternateKeyMask))
  ...

This will be true in 3 cases - "only control", "only alt", and "only control and alt". Your logic would be true any time either alt or control was down without command, including times where shift and/or function were also set. That might be what you want, just checking.
Attachment #317216 - Flags: review?(joshmoz) → review+
Attached patch Patch v1.1Splinter Review
(In reply to comment #5)
> (From update of attachment 317216 [details] [diff] [review])
> Are you sure something like this wouldn't be more accurate?
> 
> if (modifierFlags & (NSControlKeyMask | NSAlternateKeyMask))
>   ...
> 
> This will be true in 3 cases - "only control", "only alt", and "only control
> and alt". Your logic would be true any time either alt or control was down
> without command, including times where shift and/or function were also set.
> That might be what you want, just checking.

No, the code includes the Cmd key pressing. But I combine the Ctrl and Alt checking in this patch.
Attachment #317216 - Attachment is obsolete: true
Attachment #317465 - Flags: superreview?(vladimir)
Attachment #317465 - Flags: review+
Attachment #317465 - Flags: superreview?(vladimir) → superreview+
Attachment #317465 - Flags: approval1.9?
Comment on attachment 317465 [details] [diff] [review]
Patch v1.1

a1.9+=damons
Attachment #317465 - Flags: approval1.9? → approval1.9+
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9
Verified with Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.4; en-US; rv:1.9pre) Gecko/2008042806 Minefield/3.0pre ID:2008042806
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: