Bug 430419 Command-Option-F does not select search box #2 r=josh, sr=roc, a=dsicore